Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1124,7 +1124,7 @@
    "source": [
     "def m_b_data(m, b, x_values):\n",
     "    out_dict = []\n",
-    "    out_dict[]"
+    "    out_dict['x'] = x_"
    ]
   },
   {
