--- a/index.ipynb
+++ b/index.ipynb
@@ -1416,17 +1416,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "def slope(x_values, y_values):\n",
-    "    return(y_values[1] - y_values[0] ) / ( x_values[1] - x_values[0])\n"
+    "    return(y_values[len(y_values)-1] - y_values[0] ) / ( x_values[len(x_values)-1] - x_values[0])\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1435,7 +1436,7 @@
        "1.5"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
