Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1459,7 +1459,9 @@
    "outputs": [],
    "source": [
     "def y_intercept(x_values, y_values, m = None):\n",
-    "    pass"
+    "    local_slope = slope(x_values, y_values) \n",
+    "    b =  y_values[0] - local_slope*x_values[0] #b = y - mx\n",
+    "    return b"
    ]
   },
   {
