Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1520,7 +1520,13 @@
    "outputs": [],
    "source": [
     "def build_starting_line(x_values, y_values):\n",
-    "    pass"
+    "    out_dict = {}\n",
+    "    local_slope = slope(x_values, y_values)\n",
+    "    local_y_intercept = y_intercept(x_values, y_values)\n",
+    "\n",
+    "    out_dict['b'] = local_y_intercept\n",
+    "    out_dict['m'] = local_slope\n",
+    "    return out_dict"
    ]
   },
   {
