--- a/index.ipynb
+++ b/index.ipynb
@@ -1643,7 +1643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1653,9 +1653,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'x': [200, 400, 300, 600],\n",
+       " 'y': [400, 700, 500, 900],\n",
+       " 'mode': 'markers',\n",
+       " 'name': 'comedy show data'}"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "comedy_show_trace = trace_values(show_x_values, show_y_values, name = 'comedy show data')\n",
     "comedy_show_trace"
@@ -1663,9 +1677,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'b': 150.0, 'm': 1.25}"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "show_starting_line = build_starting_line(show_x_values, show_y_values)\n",
     "show_starting_line"
@@ -1673,7 +1698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
